add description for enum field
