# api/v1/swagger/ev.swagger.json
@@ -69,6 +69,7 @@
           },
           {
             "name": "resultType",
+            "description": "* CHECK_IF_EMAIL_EXIST, CIEE - [check-if-email-exists format](https://github.com/amaurymartiny/check-if-email-exists#%EF%B8%8F-json-output).\n* MAILBOXVALIDATOR, MAIL_BOX_VALIDATOR, MBV - [mailboxvalidator.com format](https://www.mailboxvalidator.com/api-single-validation).\n* PROMPT_EMAIL_VERIFICATION_API, PEVA - [Email Verification api format](https://promptapi.com/marketplace/description/email_verification-api) from [promptapi](https://promptapi.com).\n",
             "in": "query",
             "required": false,
             "type": "string",
@@ -91,6 +92,21 @@
     }
   },
   "definitions": {
+    "EmailRequestResultType": {
+      "type": "string",
+      "enum": [
+        "CHECK_IF_EMAIL_EXIST",
+        "CIEE",
+        "MAILBOXVALIDATOR",
+        "MAIL_BOX_VALIDATOR",
+        "MBV",
+        "PROMPT_EMAIL_VERIFICATION_API",
+        "PEVA"
+      ],
+      "default": "CHECK_IF_EMAIL_EXIST",
+      "description": "\\* CHECK_IF_EMAIL_EXIST, CIEE - [check-if-email-exists format](https://github.com/amaurymartiny/check-if-email-exists#%EF%B8%8F-json-output).\r\n\\* MAILBOXVALIDATOR, MAIL_BOX_VALIDATOR, MBV - [mailboxvalidator.com format](https://www.mailboxvalidator.com/api-single-validation).\r\n\\* PROMPT_EMAIL_VERIFICATION_API, PEVA - [Email Verification api format](https://promptapi.com/marketplace/description/email_verification-api) from [promptapi](https://promptapi.com).",
+      "title": "ResultType"
+    },
     "check_if_email_existMisc": {
       "type": "object",
       "properties": {
@@ -334,7 +350,8 @@
           "type": "string"
         },
         "resultType": {
-          "$ref": "#/definitions/v1ResultType"
+          "$ref": "#/definitions/EmailRequestResultType",
+          "description": "* CHECK_IF_EMAIL_EXIST, CIEE - [check-if-email-exists format](https://github.com/amaurymartiny/check-if-email-exists#%EF%B8%8F-json-output).\n* MAILBOXVALIDATOR, MAIL_BOX_VALIDATOR, MBV - [mailboxvalidator.com format](https://www.mailboxvalidator.com/api-single-validation).\n* PROMPT_EMAIL_VERIFICATION_API, PEVA - [Email Verification api format](https://promptapi.com/marketplace/description/email_verification-api) from [promptapi](https://promptapi.com).\n"
         }
       }
     },
@@ -351,19 +368,6 @@
           "$ref": "#/definitions/presentersprompt_email_verification_apiResult"
         }
       }
-    },
-    "v1ResultType": {
-      "type": "string",
-      "enum": [
-        "CHECK_IF_EMAIL_EXIST",
-        "CIEE",
-        "MAILBOXVALIDATOR",
-        "MAIL_BOX_VALIDATOR",
-        "MBV",
-        "PROMPT_EMAIL_VERIFICATION_API",
-        "PEVA"
-      ],
-      "default": "CHECK_IF_EMAIL_EXIST"
     }
   },
   "securityDefinitions": {
